nearly done with basic sprite animation. reactive statsand fixed positioning mostly done

--- a/css/style.css
+++ b/css/style.css
@@ -1,97 +1,106 @@
-/* * {
+
+    /* 1119 × 747*/
     
-} */
 html {
-    background-position: top;
-    /* background-repeat: no-repeat; */
-    background-image: url('../img/snow-field.jpeg');
+    /* margin: auto; */
+}
+
+body {
+    contain: layout;
+    width: 1119px;
+    height: 747px;
+    justify-items: center;
+    background-position: center;
+    background-repeat: no-repeat;
+    /* background-image: url('../img/snow-field.jpeg'); */
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
     opacity: 1;
 }
-
-body {
-
+#gameboard {
+    display: flex;
+    flex-wrap: wrap;
+    height: 200px;
+    width: 200px;
+    border-radius: 50%;
 }
 
 #bkg-img {
-    /* -moz-background-size: cover;
+    opacity: 0.6;
+    width: 1119px;
+    height: 747px;
+    height: 100%;
+    -moz-background-size: cover;
     -o-background-size: cover;
-    background-size: cover; */
-    height:fit-content;
-    width:fit-content;
-    opacity: 0.5;
+    background-size: cover;
 }
 
 /* sprites */
 img.p1-sprite {
-    display: flex;
-    width: 400px;
+    /* display: flex; */
     position: fixed;
+    width: 400px;
+    top: 272px;
     left: 200px;
-    top: 150px;
-    /* animation: float 1s ease-in forwards infinite alternate */
+}
+
+img.p2-sprite {
+    /* display: flex; */
+    width: 230px;
+    position: fixed;
+    top: 207px;
+    right: 200px;
+    transform: scaleX(-1);
 }
 
 #p1-effect {
     display: flex;
     position: fixed;
-    top: 250px;
+    top: 370px;
     width: 150px;
     opacity: 0;
 }
 
 #p1-sprite-points {
-    color: white;
+    color:red;
     display: flex;
     position: fixed;
     left: 255px;
-    top: 315px;
+    top: 400px;
     width: 150px;
     opacity: 0;
-    font-size: 20px;;
+    font-size: 30px;;
     font-weight: 900;
-    font-family: 'Gowun Batang', serif;
-    
+    font-family: 'Josefin Sans', sans-serif;
 }
+
 #p2-sprite-points {
-    color: white;
+    color:red;
     display: flex;
     position: fixed;
-    right: 200px; 
-    top: 315px;
+    right: 180px; 
+    top: 400px;
     width: 150px;
     opacity: 0;
-    font-size: 20px;;
+    font-size: 30px;;
     font-weight: 900;
-    font-family: 'Gowun Batang', serif;
-    
+    font-family: 'Josefin Sans', sans-serif;
 }
 
 #p2-effect {
     position: fixed;
-    top: 250px;
+    top: 350px;
     padding: 0px 35px;
     width: 150px;
     opacity: 0;
-}
-
-img.p2-sprite {
-    display: flex;
-    width: 230px;
-    position: fixed;
-    top: 87px;
-    right: 200px;
-    transform: scaleX(-1);
 }
 
 /* battle and stat menus */
 .footer {
     display:flex;
     position: fixed;
-    /* align-items: flex-end; */
     bottom: 20px;
     width: 100%;
     justify-content: space-between;    
@@ -131,7 +140,6 @@ img.p2-sprite {
     width: 300px;
     font-size: 20px;;
     font-family: 'Gowun Batang', serif;
-    
 }
 
 #p1-battle-menu {
@@ -189,21 +197,20 @@ img.p2-sprite {
 @keyframes p1-attack { 
     0% {transform: translateX(0%);
         content: url('../gifs/Martial-Hero-run.gif')}
-    50% {transform: translateX(50%);
+    50% {transform: translate(100%);;
         content: url('../gifs/Martial-Hero-attack.gif')}
     65% {
         content: url('../gifs/Martial-Hero-fall.gif')}
     100% {transform: translateX(0%)}
 }
 @keyframes p2-attack { 
-    0% {transform: translateX(-1);
-        content: url('../gifs/Wizard-attack1.gif')}
-    50% {transform: translateX(-1,);
-        transform: translateX(-50%);
-        content: url('../gifs/Wizard-attack1.gif')}
+    0% {transform: translate(0);
+        content: url('../gifs/Wizard-attack.gif')}
+    50% {transform: translate(-100%);
+        content: url('../gifs/Wizard-attack.gif')}
     65% {
-        content: url('../gifs/Wizard-attack1.gif')}
-    100% {transform: translateX(-1)}
+        content: url('../gifs/Wizard-attack.gif')}
+    100% {transform: translate(0)}
 }
 
 @keyframes p1-spell { 
@@ -216,12 +223,12 @@ img.p2-sprite {
         transform: translateY(0%)}
 }
 @keyframes p2-spell { 
-    0% {content: url('../gifs/Wizard-fall.gif');
+    0% {content: url('../gifs/Wizard-jump.gif');
         transform: translateY(0%)}
     50%{transform: translateY(-30%);}
     80%{transform: translateY(-30%);
-        content: url('../gifs/Wizard-fall.gif')}
-    100% {content: url('../gifs/Wizard-fall.gif');
+        content: url('../gifs/Wizard-jump.gif')}
+    100% {content: url('../gifs/Wizard-jump.gif');
         transform: translateY(0%)}
 }
 
@@ -230,8 +237,8 @@ img.p2-sprite {
     100% {content: url('../gifs/Martial-Hero-dead.gif');}
 }
 @keyframes p2-heal { 
-    0% {content: url('../gifs/Wizard-jump.gif')}
-    100% {content: url('../gifs/Wizard-jump.gif');}
+    0% {content: url('../gifs/Wizard-fall.gif')}
+    100% {content: url('../gifs/Wizard-fall.gif');}
 }
 
 @keyframes p1-spell-effect{ 
@@ -249,53 +256,55 @@ img.p2-sprite {
 
 @keyframes p1-heal-effect{ 
     0% {content: url('../gifs/Heal.gif');
-    opacity: 1;}
+    opacity: 0.7;}
     100% {content: url('../gifs/Heal.gif');
     opacity: 1;}
 }
 @keyframes p2-heal-effect{ 
     0% {content: url('../gifs/Heal.gif');
-    opacity: 1;}
-    100% {content: url('../gifs/Heal.gif');
-    opacity: 1;}
+    opacity: 0.7;}
+    90% {opacity: 0.7;}
+    100% { opacity: 1;
+        content: url('../gifs/Heal.gif')}
 }
 
 @keyframes p1-hp-points-up {
     0% {transform:translateY(0%);
-    opacity: 0}
+        opacity: 0}
     25% {opacity: 1;}
     75% {opacity: 1;}
-    100% {transform:translateY(-350%);
+    100%{transform:translateY(-350%);
+        color: chartreuse;
         opacity: 0}
 }
 
 @keyframes p1-hp-points-down {
     0% {transform:translateY(0%);
-        color: red;
         opacity: 0}
     25% {opacity: 1;}
     75% {opacity: 1;}
     100% {transform:translateY(-350%);
-        color: red;
+        color:white;
         opacity: 0}
 }
 @keyframes p2-hp-points-down {
     0% {transform:translateY(0%);
-        color: red;
+
         opacity: 0}
     25% {opacity: 1;}
     75% {opacity: 1;}
     100% {transform:translateY(-350%);
-        color: red;
+        color: white;
         opacity: 0}
 }
 
 @keyframes p2-hp-points-up {
     0% {transform:translateY(0%);
-    opacity: 0}
+        opacity: 0}
     25% {opacity: 1;}
     75% {opacity: 1;}
-    100% {transform:translateY(-350%);
+    100%{transform:translateY(-350%);
+        color: chartreuse;
         opacity: 0}
 }
 
@@ -303,17 +312,50 @@ img.p2-sprite {
     100% {content: url('../gifs/Martial-Hero-take-hit-flash.gif');}
 }
 
+@keyframes p1-crit-struck {
+    0% {animation-duration: 5s;
+        content: url('../gifs/Bloodspurt.gif');
+        opacity: 1;}
+    100% {content: url('../gifs/Bloodspurt.gif')}
+}
+
+@keyframes p2-struck {
+    0% {animation-duration: 5s;}
+    100% {content: url('../gifs/Wizard-struck.gif');}
+}
+
+@keyframes p2-crit-struck {
+    0% {animation-duration: 5s;
+        content: url('../gifs/Bloodspurt.gif');
+        opacity: 1;}
+    100% {content: url('../gifs/Bloodspurt.gif')}
+}
+
+@keyframes p1-spell-struck {
+    0% {content: url('../gifs/Explosion.gif');
+        opacity: 0}
+        25% {opacity: 0.7;}
+        75% {opacity: 0.7;}
+        100% {content: url('../gifs/Explosion.gif');
+            opacity: 1}
+}            
+
+@keyframes p2-spell-struck {
+    0% {content: url('../gifs/Explosion.gif');
+        opacity: 0}
+        25% {opacity: 0.7;}
+        75% {opacity: 0.7;}
+        100% {content: url('../gifs/Explosion.gif');
+            opacity: 1}
+        }
+
 @keyframes p1-death {
     0% {content: url('../gifs/Martial-Hero-death.gif');}
     100% {content: url('../gifs/Martial-Hero-dead.gif');}
 }
 
-@keyframes p2-struck {
-    0% {animation-duration: 5s;} /* why isn't this working? */
-    100% {content: url('../gifs/Wizard-struck.gif');}
-}
-
 @keyframes p2-death {
+    0% {content: url('../gifs/Martial-Hero-death.gif');}
     100% {content: url('../gifs/Wizard-death.gif');}
 }
 
