--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,3 @@
-
-
 body {
     contain: layout;
     width: 1119px;
@@ -31,6 +29,11 @@ body {
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+}
+
+#vol-control {
+    position: fixed;
+    border: 3px solid red;
 }
 
 /* sprites */
