--- a/css/style.css
+++ b/css/style.css
@@ -23,8 +23,48 @@ body {
 
 .vol-cont {
     position: fixed;
-    /* border: 3px solid aqua; */
     margin-left: 42%;
+    flex-direction: column;
+}
+
+input[type=checkbox] {
+    display:none;
+}
+
+input[type=checkbox]:checked + label {
+    background:url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/969699/mute.svg") no-repeat;
+    padding: 20px;
+    background-size: 70%;
+}
+
+input[type=checkbox] + label {
+    background:url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/969699/unmute.svg") no-repeat;
+    padding: 20px;
+    background-size: 50%;
+}
+
+#mute:hover {
+    opacity: .5;
+}
+
+.slider {
+    margin-top: 10px;
+    -webkit-appearance: none;
+    appearance: none;
+    background: #76b95b;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s; /* 0.2 seconds transition on hover */
+    transition: opacity .2s;
+    box-shadow: 0 0 5px #000000,
+    0 0 5px #f403c0,
+    0 0 10px #f403c0,
+    0 0 40px #f403c0;
+    border-radius: 10px;
+}
+
+.slider:hover {
+    opacity: 1;
 }
 
 #bkg-img {
@@ -35,6 +75,7 @@ body {
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+    border-radius: 5px;
 }
 
 /* sprites */
